--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "nodemon": "^3.1.10",
-    "pug": "^3.0.3"
+    "pug": "^3.0.3",
+    "sweetalert2": "^11.26.3"
   }
 }
